--- a/themes/techva-raditian/static/css/custom.css
+++ b/themes/techva-raditian/static/css/custom.css
@@ -63,3 +63,9 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
+
+@media (min-width: 992px) {
+  .rad-showcase__bg {
+    right: unset;
+  }
+}
